feat: infinite scroll selector, confirmation dialogs, feature coloring, fixing stuff

--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-success-toast></app-success-toast>
+<app-confirmation-dialog></app-confirmation-dialog>
+
 <app-background-clouds></app-background-clouds>
 
 <router-outlet></router-outlet>
