--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
@@ -121,7 +121,7 @@
                     request.requestingUser?.name
                   )
                 "
-                class="cool-feed-button rounded marketplace-button font-weight-normal"
+                class="cool-action-button rounded marketplace-button font-weight-normal"
               >
                 Respond to Request
               </a>
