--- a/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-detail-page/service-providers-detail-page.component.html
@@ -1,6 +1,11 @@
 <div class="f-c-c-c w-100">
   <app-service-providers-content
     class="w-100"
+    [worker]="worker"
+    [averageRating]="worker?.averageRating || 0"
+    [reviewsCount]="worker?.totalReviews || 0"
+    [postCount]="worker?.totalPosts || 0"
+    [isTheWorker]="isTheWorker()"
     (openEditProfile)="openEditDialog()"
   >
   </app-service-providers-content>
