--- a/webapp/front/front/src/app/shared/components/paginator/paginator.component.scss
+++ b/webapp/front/front/src/app/shared/components/paginator/paginator.component.scss
@@ -17,7 +17,7 @@ $pagination-categories: (
     background: var(--onbackground),
   ),
   admin: (
-    primary: var(--admin-color),
+    primary: var(--admin),
     text: var(--text),
     background: var(--onbackground),
   ),
