--- a/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.scss
+++ b/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.scss
@@ -15,9 +15,9 @@ $wave-footer-themes: (
     background: var(--profession),
   ),
   admin: (
-    primary: var(--admin-color),
+    primary: var(--admin),
     text: var(--onprimary),
-    background: var(--admin-color),
+    background: var(--admin),
   ),
   worker: (
     primary: var(--worker-color),
