--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -24,41 +24,20 @@
 
           <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
             <div class="col-md-12">
-              <label for="amenityUrl" class="mt-3 mb-1">Select Amenity</label>
-              <div
-                class="amenity-scroll-container"
-                (scroll)="onScroll($event)"
-                style="
-                  border: 1px solid #ccc;
-                  max-height: 200px;
-                  overflow-y: auto;
-                  padding: 0.5rem;
-                "
+              <label for="amenityUrl" class="mt-3 mb-2"
+                >Select an Amenity</label
               >
-                <div
-                  *ngFor="let entry of amenities"
-                  class="amenity-item"
-                  [class.selected]="
-                    reservationForm.get('amenityUrl')?.value === entry.self
-                  "
-                  (click)="selectAmenity(entry.self)"
-                  style="
-                    cursor: pointer;
-                    padding: 0.5rem;
-                    border-bottom: 1px solid #eee;
-                  "
-                >
-                  {{ entry.name }}
-                </div>
-
-                <div
-                  *ngIf="isLoading"
-                  class="loading-indicator"
-                  style="text-align: center; padding: 1rem"
-                >
-                  Loading more amenities...
-                </div>
-              </div>
+              <app-infinite-scroll-select
+                [theme]="'default'"
+                [multiple]="false"
+                [fetchData]="fetchAmenities"
+                [displayFn]="displayAmenity"
+                formControlName="amenity"
+                class="w-100"
+                [height]="'200px'"
+                [uniqueKey]="'self'"
+              >
+              </app-infinite-scroll-select>
 
               <p
                 class="error"
