--- a/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -6,7 +6,9 @@
     <div class="page-content" id="page-content">
       <div class="row m-l-0 m-r-0">
         <div
-          class="col-md-4 bg-c-lite-green user-profile align-items-center justify-content-center"
+          class="col-md-4 user-profile align-items-center justify-content-center bg-c-{{
+            theme
+          }}"
         >
           <div class="card-block text-center text-white mt-5">
             <div class="m-b-25">
@@ -120,4 +122,4 @@
 
 <div class="invisible-div"></div>
 
-<app-wave-footer></app-wave-footer>
+<app-wave-footer [theme]="theme"></app-wave-footer>
