--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -53,6 +53,8 @@ body {
   --onbackgroundfaded: rgb(245, 245, 244, 0.2);
   --darkonbackground: rgb(235, 236, 233);
   --primary: #328d3d;
+
+  /* #ceebc1, #c5e3b7 */
   --between-primary: #709a58;
   --onprimary: #fdfaf1;
   --old-primary: #9ad379;
@@ -66,16 +68,21 @@ body {
   --light-green: #9ad379;
   --star-background: #dedad4;
   --star-active: #ff9c1a;
-  --to-lila: #dfdfea;
   --used: #5975d0;
   --new: #6cb945;
   --user-profile: #aed794;
   --stripe: #eef0f2;
 
+  --to-primary: #e3f1dc;
+  --to-lila: #e6e6f1;
+  --to-profession: #e7eff6;
+  --to-admin: #dee4f5;
+  --to-error: #fedede;
+
   --lila: #8974a5;
   --accent: #6696e2;
   --profession: #5b9bd5;
-  --admin-color: #26a69a;
+  --admin: #3d4a70;
 
   --border-light: 5px;
   --border-radius: 0.8em;
@@ -111,12 +118,15 @@ body {
   --star-active: #ff9c1a;
   --stripe: #181d25;
 
-  --lila: #a98cd1;
+  --to-primary: #c5e3b7;
   --to-lila: rgb(72, 78, 89);
+  --to-profession: #deefff;
+  --to-admin: #26a69a;
 
+  --lila: #a98cd1;
   --accent: #6696e2;
   --profession: #77bdff;
-  --admin-color: #80cbc4;
+  --admin: #80cbc4;
 
   --user-profile: #20252b;
 }
